--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+.my-container {
+  position: absolute;
+  top: 50px;
+  bottom: 48px;
+  left: 0;
+  right: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
