--- a/src/assets/styles/reset.css
+++ b/src/assets/styles/reset.css
@@ -41,3 +41,14 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+::-webkit-scrollbar {
+	width: 0 !important;
+	height: 0 !important;
+}
+
+.ellipsis {
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+}
