--- a/src/components/Tabbar/style.css
+++ b/src/components/Tabbar/style.css
@@ -4,6 +4,7 @@
   width: 100%;
   display: flex;
   border-top: .5px solid #d8d8d8;
+  background: #fff;
   padding-bottom: env(safe-area-inset-bottom);
 }
 
