--- a/src/pages/movie/style.css
+++ b/src/pages/movie/style.css
@@ -1,6 +1,16 @@
+.my-container-movie {
+  bottom: 48px !important;
+  padding-top: 44px;
+}
+
 .my-topbar {
+  position: fixed;
+  z-index: 1;
+  top: 50px;
   display: flex;
   border-bottom: 1px solid #e6e6e6;
+  background: #fff;
+  width: 100%;
   height: 44px;
 }
 
@@ -79,4 +89,93 @@
   display: inline-block;
   margin-left: 4px;
   margin-top: 5px;
+}
+
+.movie-expect {
+  padding: 12px 15px;
+  margin-bottom: 10px;
+  background: #fff;
+}
+
+.movie-expect p {
+  margin-bottom: 12px;
+  font-size: 14px;
+  color: #333;
+}
+
+.movie-expect-list {
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+
+.movie-expect-item {
+  display: inline-block;
+  width: 85px;
+  overflow: hidden;
+  margin-right: 10px;
+}
+
+.movie-expect-poster {
+  width: 85px;
+  height: 115px;
+  position: relative;
+  margin-bottom: 6px;
+}
+
+.movie-expect-poster img {
+  width: 100%;
+  height: 100%;
+}
+
+.movie-expect-wish {
+  display: inline-block;
+  width: 100%;
+  height: 35px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(-180deg,rgba(77,77,77,0),#000);
+}
+
+.movie-expect-wish p {
+  position: absolute;
+  bottom: 2px;
+  color: #faaf00;
+  width: 100%;
+  margin: 0;
+  padding: 0 2px;
+  font-size: 11px;
+  font-weight: 600;
+  box-sizing: border-box;
+}
+
+.movie-expect-wish-toggle {
+  width: 28px;
+  line-height: 28px;
+  background: rgba(61,63,71,.6);
+  text-align: center;
+  border-bottom-right-radius: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.movie-expect-name {
+  margin-bottom: 4px;
+  font-size: 13px;
+  color: #222;
+}
+
+.movie-expect-date {
+  font-size: 12px;
+  color: #999;
+}
+
+.loading-more {
+  text-align: center;
+  background: #fff;
+  padding: 15px;
+  font-size: 12px;
+  color: #555;
 }
