--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ code {
     monospace;
 }
 
+a {
+  text-decoration: none;
+}
+
 
 .my-container {
   position: absolute;
@@ -22,4 +26,5 @@ code {
   right: 0;
   overflow-x: hidden;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
